--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.data.mongodb.port=27017
 # spring.data.mongodb.username=[username]
 # spring.data.mongodb.password=[password]
 spring.data.mongodb.database=rest_tut
+
+# spring.data.mongodb.uri=mongodb+srv://puru_admin:pu8989ru@cluster0.yv60d.mongodb.net/Rest_Tut?retryWrites=true&w=majority
+# spring.data.mongodb.database=Rest_Tut
